Replace Guava ImmutableList with Java List in IntervalFilter